# doctor-workspace-recovered

./: .gitignore  AUDIT_REPORT.md  CONTRACTS.md  DOCTOR_EXECUTION_PROTOCOL.md  DOCTOR_OPERATING_PROTOCOL.md  DOCTOR_PIPELINE.md  MIDWEATHER_FINGERPRINT_GATE_FREEZE.json  MIDWEATHER_FINGERPRINT_GATE_LC322_REAL_FREEZE.json  MIDWEATHER_FINGERPRINT_GATE_LC3946_FREEZE.json  MIDWEATHER_FINGERPRINT_GATE_LC45_FREEZE.json  MIDWEATHER_FINGERPRINT_GATE_LC743_FREEZE.json  MIDWEATHER_FINGERPRINT_GATE_LC79_FREEZE.json  MIDWEATHER_FINGERPRINT_SEVAL_MANIFEST.schema.json  PHASE_C1_FREEZE.json  PHASE_C1_SPEC.md  PHASE_C3A_FREEZE.json  PHASE_C3A_SPEC.md  PHASE_C4_FREEZE.json  PHASE_C4_SPEC.md  PHASE_C5_FREEZE.json  PHASE_C5_SPEC.md  PHASE_C6_FREEZE.json  PHASE_C6_SPEC.md  PHASE_C7_FREEZE.json  PHASE_C7_SPEC.md  PHASE_LC3946_C5_FREEZE.json  PHASE_LC3946_C5_SPEC.md  PHASE_LC3946_SPEC.md  PHI_ROBUSTNESS_SPEC.md  REPRODUCE.md  doctor_bimaristan_scientific_paper.md  external_stress_layer.py  pyproject.toml  pytest.ini  solver_adapter.py  tmp_analyze_lc743.py  tmp_build_external_corpus.py  tmp_check_ccg.py  tmp_check_chatgpt.py  tmp_check_f1.py  (+42 more)
.opencode/: abstract_diff.md  abstract_diff2.md  conclusion_raw.txt  conclusion_raw2.txt  limitations_diff.md  limitations_diff2.md
csse/: analyze_mechanisms.py  binary_vector_pipeline.py  corrected_pipeline.py  correlation_geometry.py  create_lc322_v2_solvers.py  create_lc3946_v2_solvers.py  create_lc743_frozen.py  cross_problem_consistency.py  define_phi_frozen.py  define_phi_mechanism.py  define_phi_new.py  define_phi_structured.py  detector_audit.py  (+41 more)
(+830 files in other folders)
