[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctor-certify"
version = "0.1.0"
description = "Clean-gate protocol for LLM solver certification (Midweather-Fingerprint-Gate)."
readme = "REPRODUCE.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Foued Abidi", email = "foued@doctor-workspace"},
]
keywords = [
    "llm-evaluation",
    "solver-certification",
    "clean-gate",
    "midweather-fingerprint",
    "lc322",
    "lc45",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
doctor-certify = "doctor.adversarial.cli:main"

[project.urls]
Homepage = "https://github.com/anomalyco/doctor-workspace"
Issues = "https://github.com/anomalyco/doctor-workspace/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["doctor*"]
exclude = ["tests*", "data*", "experiments*", "findings*", "docs*"]

[tool.setuptools.package-data]
"doctor.adversarial" = ["py.typed"]
